# Phone_simulator

./: CMakeLists.txt  README.md  main.cpp
include/: isNum.h  number.h  phone.h
src/: CMakeLists.txt  isNum.cpp  main.cpp  number.cpp  phone.cpp
